--- a/.github/workflows/assign-user.yml
+++ b/.github/workflows/assign-user.yml
@@ -13,6 +13,7 @@ on:
 jobs:
   assign-user:
     runs-on: ubuntu-latest
+    environment: Satona
 
     permissions:
       id-token: write        # only needed if you switch to OIDC later
