--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -17,12 +17,15 @@ jobs:
     runs-on: ubuntu-latest
     
 
-    env:
-      ARM_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
-      ARM_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
-      ARM_CLIENT_ID: ${{ vars.AZURE_CLIENT_ID }}
-
     steps:
+      - name: Azure Login (OIDC)
+        uses: azure/login@v1
+        with:
+         client-id: ${{ secrets.AZURE_CLIENT_ID }}
+         tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+         subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+         enable-AzPSSession: true
+
       - name: Checkout code
         uses: actions/checkout@v3
 
