--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -22,6 +22,12 @@ jobs:
     
 
     steps:
+      - name: Debug secrets presence
+        run: |
+        if [ -z "${{ secrets.AZURE_CLIENT_ID }}" ]; then echo "AZURE_CLIENT_ID is missing"; else echo "AZURE_CLIENT_ID is set"; fi
+        if [ -z "${{ secrets.AZURE_TENANT_ID }}" ]; then echo "AZURE_TENANT_ID is missing"; else echo "AZURE_TENANT_ID is set"; fi
+        if [ -z "${{ secrets.AZURE_SUBSCRIPTION_ID }}" ]; then echo "AZURE_SUBSCRIPTION_ID is missing"; else echo "AZURE_SUBSCRIPTION_ID is set"; fi
+
       - name: Azure Login (OIDC)
         uses: azure/login@v1
         with:
