--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -24,13 +24,27 @@ jobs:
     steps:
       - name: Debug secrets presence
         env:
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        run: |
-        if [ -z "$AZURE_CLIENT_ID" ]; then echo "AZURE_CLIENT_ID is missing"; else echo "AZURE_CLIENT_ID is set"; fi
-        if [ -z "$AZURE_TENANT_ID" ]; then echo "AZURE_TENANT_ID is missing"; else echo "AZURE_TENANT_ID is set"; fi
-        if [ -z "$AZURE_SUBSCRIPTION_ID" ]; then echo "AZURE_SUBSCRIPTION_ID is missing"; else echo "AZURE_SUBSCRIPTION_ID is set"; fi
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          run: |
+           if [ -z "$AZURE_CLIENT_ID" ]; then
+            echo "AZURE_CLIENT_ID is missing"
+           else
+            echo "AZURE_CLIENT_ID is set"
+           fi
+
+           if [ -z "$AZURE_TENANT_ID" ]; then
+            echo "AZURE_TENANT_ID is missing"
+           else
+            echo "AZURE_TENANT_ID is set"
+           fi
+
+           if [ -z "$AZURE_SUBSCRIPTION_ID" ]; then
+            echo "AZURE_SUBSCRIPTION_ID is missing"
+           else
+            echo "AZURE_SUBSCRIPTION_ID is set"
+           fi
 
       - name: Azure Login (OIDC)
         uses: azure/login@v1
