--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -2,11 +2,11 @@ name: 'Terraform Plan'
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches:
       - main
     paths:
-      - 'Terraform/satona-build1/**'  # Only trigger when files in this folder change
+      - 'Terraform/**'  # Only trigger when files in this folder change
 
 permissions:
   id-token: write
