--- a/.github/workflows/auto-pr-to-main.yml
+++ b/.github/workflows/auto-pr-to-main.yml
@@ -1,20 +1,36 @@
-name: Auto PR to main
+name: Auto PR on Push
 
 on:
   push:
     branches-ignore:
       - main
-
+      
 jobs:
-  create-pr:
+  create-pull-request:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Required for proper branch comparison
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v6
         with:
-          base: main
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "Auto-created PR from ${{ github.ref_name }}"
+          title: "Auto PR: ${{ github.ref_name }}"
+          body: |
+            Automated pull request created from push to ${{ github.ref_name }}
+            
+            Branch: ${{ github.ref_name }}
+            Triggered by: ${{ github.actor }}
           branch: ${{ github.ref_name }}
-          title: "Auto PR from ${{ github.ref_name }}"
-          body: "This pull request was automatically generated."
+          base: main
+          labels: |
+            automated-pr
+            needs-review
