--- a/.github/workflows/auto-pr-to-main.yml
+++ b/.github/workflows/auto-pr-to-main.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           fetch-depth: 0  # Required for proper branch comparison
 
+      - name: Create PR branch from feature branch
+        run: |
+          git checkout -b auto-pr/${{ github.ref_name }} ${{ github.ref_name }}
+
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
@@ -29,7 +33,6 @@ jobs:
             
             Branch: ${{ github.ref_name }}
             Triggered by: ${{ github.actor }}
-          source_branch: ${{ github.ref_name }}
           branch: auto-pr/${{ github.ref_name }}
           base: main
           labels: |
